AoParser2.cpp
/*
* Copyright 2025 Rochus Keller <mailto:me@rochus-keller.ch>
*
* This file is part of the ActiveOberon project.
*
* The following is the license that applies to this copy of the
* file. For a license to use the file under conditions
* other than those described here, please email to me@rochus-keller.ch.
*
* GNU General Public License Usage
* This file may be used under the terms of the GNU General Public
* License (GPL) versions 2.0 or 3.0 as published by the Free Software
* Foundation and appearing in the file LICENSE.GPL included in
* the packaging of this file. Please review the following information
* to ensure GNU General Public Licensing requirements will be met:
* http://www.fsf.org/licensing/licenses/info/GPLv2.html and
* http://www.gnu.org/copyleft/gpl.html.
*/

#include "AoParser2.h"
#include "AoAst.h"
#include <QtDebug>
#include <limits>
using namespace Ao;
using namespace Ast;


static inline bool FIRST_ImportList(int tt) {
	return tt == Tok_IMPORT;
}

static inline bool FIRST_DeclSeq(int tt) {
	return tt == Tok_VAR || tt == Tok_CONST || tt == Tok_PROCEDURE || tt == Tok_TYPE;
}

static inline bool FIRST_ConstDecl(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_TypeDecl(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_VarDecl(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_Assembler(int tt) {
	return tt == Tok_CODE;
}

static inline bool FIRST_ProcDecl(int tt) {
	return tt == Tok_PROCEDURE;
}

static inline bool FIRST_ProcHead(int tt) {
    return tt == Tok_Amp || tt == Tok_Minus || tt == Tok_Star || tt == Tok_Lbrack || tt == Tok_ident || tt == Tok_Tilde;
}

static inline bool FIRST_SysFlag(int tt) {
	return tt == Tok_Lbrack;
}

static inline bool FIRST_FormalPars(int tt) {
	return tt == Tok_Lpar;
}

static inline bool FIRST_FPSection(int tt) {
	return tt == Tok_VAR || tt == Tok_ident;
}

static inline bool FIRST_ArrayType(int tt) {
	return tt == Tok_ARRAY;
}

static inline bool FIRST_RecordType(int tt) {
	return tt == Tok_RECORD;
}

static inline bool FIRST_PointerType(int tt) {
	return tt == Tok_POINTER;
}

static inline bool FIRST_ObjectType(int tt) {
	return tt == Tok_OBJECT;
}

static inline bool FIRST_ProcedureType(int tt) {
	return tt == Tok_PROCEDURE;
}

static inline bool FIRST_AliasType(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_Type(int tt) {
	switch(tt){
	case Tok_RECORD:
	case Tok_OBJECT:
	case Tok_ARRAY:
	case Tok_PROCEDURE:
	case Tok_POINTER:
	case Tok_ident:
		return true;
	default: return false;
	}
}

static inline bool FIRST_FieldDecl(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_FieldList(int tt) {
	return tt == Tok_Semi || tt == Tok_ident;
}

static inline bool FIRST_Body(int tt) {
	return tt == Tok_BEGIN;
}

static inline bool FIRST_Attributes(int tt) {
	return tt == Tok_Lbrace;
}

static inline bool FIRST_StatBlock(int tt) {
	return tt == Tok_BEGIN;
}

static inline bool FIRST_StatSeq(int tt) {
	switch(tt){
	case Tok_CASE:
	case Tok_FOR:
	case Tok_EXIT:
	case Tok_IF:
	case Tok_LOOP:
	case Tok_REPEAT:
	case Tok_WITH:
	case Tok_WHILE:
	case Tok_BEGIN:
	case Tok_RETURN:
	case Tok_ident:
	case Tok_Semi:
		return true;
	default: return false;
	}
}

static inline bool FIRST_AssigOrCall(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_IfStat(int tt) {
	return tt == Tok_IF;
}

static inline bool FIRST_CaseStat(int tt) {
	return tt == Tok_CASE;
}

static inline bool FIRST_WhileStat(int tt) {
	return tt == Tok_WHILE;
}

static inline bool FIRST_RepeatStat(int tt) {
	return tt == Tok_REPEAT;
}

static inline bool FIRST_ForStat(int tt) {
	return tt == Tok_FOR;
}

static inline bool FIRST_LoopStat(int tt) {
	return tt == Tok_LOOP;
}

static inline bool FIRST_WithStat(int tt) {
	return tt == Tok_WITH;
}

static inline bool FIRST_ReturnStat(int tt) {
	return tt == Tok_RETURN;
}

static inline bool FIRST_Statement(int tt) {
	switch(tt){
	case Tok_CASE:
	case Tok_FOR:
	case Tok_EXIT:
	case Tok_IF:
	case Tok_LOOP:
	case Tok_REPEAT:
	case Tok_WITH:
	case Tok_WHILE:
	case Tok_RETURN:
	case Tok_BEGIN:
	case Tok_ident:
		return true;
	default: return false;
	}
}

static inline bool FIRST_Case(int tt) {
	switch(tt){
	case Tok_NIL:
	case Tok_Plus:
	case Tok_Tilde:
	case Tok_Minus:
	case Tok_string:
	case Tok_Lpar:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_real:
	case Tok_Lbrace:
	case Tok_ident:
		return true;
	default: return false;
	}
}

static inline bool FIRST_CaseLabels(int tt) {
	switch(tt){
	case Tok_NIL:
	case Tok_Plus:
	case Tok_Tilde:
	case Tok_Minus:
	case Tok_string:
	case Tok_Lpar:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_real:
	case Tok_Lbrace:
	case Tok_ident:
		return true;
	default: return false;
	}
}

static inline bool FIRST_ConstExpr(int tt) {
	switch(tt){
	case Tok_NIL:
	case Tok_Plus:
	case Tok_Tilde:
	case Tok_Minus:
	case Tok_string:
	case Tok_Lpar:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_real:
	case Tok_Lbrace:
	case Tok_ident:
		return true;
	default: return false;
	}
}

static inline bool FIRST_Expr(int tt) {
	switch(tt){
	case Tok_NIL:
	case Tok_Plus:
	case Tok_Tilde:
	case Tok_Minus:
	case Tok_string:
	case Tok_Lpar:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_real:
	case Tok_Lbrace:
	case Tok_ident:
		return true;
	default: return false;
	}
}

static inline bool FIRST_SimpleExpr(int tt) {
	switch(tt){
	case Tok_NIL:
	case Tok_Plus:
	case Tok_Tilde:
	case Tok_Minus:
	case Tok_string:
	case Tok_Lpar:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_real:
	case Tok_Lbrace:
	case Tok_ident:
		return true;
	default: return false;
	}
}

static inline bool FIRST_Term(int tt) {
	switch(tt){
	case Tok_NIL:
	case Tok_Plus:
	case Tok_Tilde:
	case Tok_Minus:
	case Tok_string:
	case Tok_Lpar:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_real:
	case Tok_Lbrace:
	case Tok_ident:
		return true;
	default: return false;
	}
}

static inline bool FIRST_Factor(int tt) {
	switch(tt){
	case Tok_NIL:
	case Tok_Tilde:
	case Tok_string:
	case Tok_Lpar:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_real:
	case Tok_Lbrace:
	case Tok_ident:
		return true;
	default: return false;
	}
}

static inline bool FIRST_Set(int tt) {
	return tt == Tok_Lbrace;
}

static inline bool FIRST_Element(int tt) {
	switch(tt){
	case Tok_NIL:
	case Tok_Plus:
	case Tok_Tilde:
	case Tok_Minus:
	case Tok_string:
	case Tok_Lpar:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_real:
	case Tok_Lbrace:
	case Tok_ident:
		return true;
	default: return false;
	}
}

static inline bool FIRST_Relation(int tt) {
	switch(tt){
	case Tok_Eq:
	case Tok_Lt:
	case Tok_IN:
	case Tok_Leq:
	case Tok_IS:
	case Tok_Geq:
	case Tok_Hash:
	case Tok_Gt:
		return true;
	default: return false;
	}
}

static inline bool FIRST_MulOp(int tt) {
	return tt == Tok_DIV || tt == Tok_Amp || tt == Tok_Star || tt == Tok_MOD || tt == Tok_Slash;
}

static inline bool FIRST_AddOp(int tt) {
	return tt == Tok_Plus || tt == Tok_Minus || tt == Tok_OR;
}

static inline bool FIRST_Designator(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_Selector(int tt) {
	return tt == Tok_Dot || tt == Tok_Lpar || tt == Tok_Lbrack || tt == Tok_Hat;
}

static inline bool FIRST_ExprList(int tt) {
	switch(tt){
	case Tok_NIL:
	case Tok_Plus:
	case Tok_Tilde:
	case Tok_Minus:
	case Tok_string:
	case Tok_Lpar:
	case Tok_hexchar:
	case Tok_integer:
	case Tok_real:
	case Tok_Lbrace:
	case Tok_ident:
		return true;
	default: return false;
	}
}

static inline bool FIRST_IdentList(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_Qualident(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_IdentDef(int tt) {
	return tt == Tok_ident;
}

static inline bool FIRST_number(int tt) {
	return tt == Tok_integer || tt == Tok_real;
}

Parser2::Parser2(AstModel* m, Scanner2* s):scanner(s),mdl(m),thisMod(0)
{
    predefSymbols.resize(MaxAttr);
    predefSymbols[UNTRACED] = Token::getSymbol("UNTRACED");
    predefSymbols[ACTIVE] = Token::getSymbol("ACTIVE");
    predefSymbols[DELEGATE] = Token::getSymbol("DELEGATE");
    predefSymbols[EXCLUSIVE] = Token::getSymbol("EXCLUSIVE");
    predefSymbols[PRIORITY] = Token::getSymbol("PRIORITY");
    predefSymbols[SAFE] = Token::getSymbol("SAFE");
    BEGIN = Token::getSymbol("BEGIN$");
}

Parser2::~Parser2()
{
    if( thisMod )
        Declaration::deleteAll(thisMod);
}

void Parser2::RunParser() {
	errors.clear();
    count = 0;
    codeSectionCount = 0;
    hasProcedures = false;
    hasAnyBody = false;
	next();
	Module();
#if 0
    if( codeSectionCount != 0 )
        qDebug() << "module" << thisMod->name << "has" << codeSectionCount << "assembler procedures";
#endif
}

Declaration* Parser2::takeResult()
{
    Declaration* res = thisMod;
    thisMod = 0;
    return res;
}

void Parser2::next() {
	cur = la;
	la = scanner->next();
	while( la.d_type == Tok_Invalid ) {
        errors << Error(la.d_val, la.toRowCol(), la.d_sourcePath);
		la = scanner->next();
	}
}

Token Parser2::peek(int off) {
	if( off == 1 )
		return la;
	else if( off == 0 )
		return cur;
	else
		return scanner->peek(off-1);
}

void Parser2::invalid(const char* what, bool eat) {
    errors << Error(QString("invalid %1").arg(what),la.toRowCol(), la.d_sourcePath);
    if( eat )
        next();
}

bool Parser2::expect(int tt, bool pkw, const char* where) {
    if( la.d_type == tt) {
        next();
        return true;
    }
    else {
        errors << Error(QString("'%1' expected in %2")
                        .arg(tokenTypeString(tt))
                        .arg(where),la.toRowCol(), la.d_sourcePath);
        return false;
    }
}

static inline void dummy() {}

void Parser2::Module() {
    if( la.d_type != Tok_MODULE )
    {
        la.d_sourcePath = scanner->source();
        la.d_lineNr = 1;
        error(la,"not an Oberon module");
        return;
    }
    Declaration* m = new Declaration();
    m->kind = Declaration::Module;
    if( thisMod )
        Declaration::deleteAll(thisMod);
    thisMod = m;

    mdl->openScope(m);

    expect(Tok_MODULE, false, "Module");
	expect(Tok_ident, false, "Module");
    m->name = cur.d_val;
    m->pos = cur.toRowCol();
    ModuleData md;
    md.sourcePath = scanner->source();
    md.fullName = cur.d_val;
    expect(Tok_Semi, false, "Module");
	if( FIRST_ImportList(la.d_type) ) {
		ImportList();
	}
	DeclSeq();
	if( FIRST_Body(la.d_type) ) {
        la.d_val = BEGIN;
        Declaration* procDecl = addDecl(la, Declaration::Private, Declaration::Procedure);
        if( procDecl == 0 )
            return;
        procDecl->begin = 1;
        mdl->openScope(procDecl);
        procDecl->body = Body();
        mdl->closeScope();
    }
	expect(Tok_END, false, "Module");
	expect(Tok_ident, false, "Module");
    md.end = cur.toRowCol();
    m->data = QVariant::fromValue(md);
    mdl->closeScope();
    if( la.d_type != Tok_Dot )
        // don't use expect here thus avoiding calling next() which might render an error in case of text after modules
        errors << Error("expecting a dot at the end of a module",la.toRowCol(), la.d_sourcePath);
    if( hasProcedures && !hasAnyBody )
        m->extern_ = true; // all procs in the module are external, no body required
}

void Parser2::ImportDecl() {
    Token localName;
    if( ( peek(1).d_type == Tok_ident && peek(2).d_type == Tok_ColonEq )  ) {
        expect(Tok_ident, false, "ImportDecl");
        localName = cur;
        expect(Tok_ColonEq, false, "ImportDecl");
    }
    expect(Tok_ident, false, "ImportDecl");
    Token module = cur;
    if( localName.d_type == 0 )
        localName = module;
    Declaration* importDecl = addDecl(localName, 0, Declaration::Import);
    if( importDecl == 0 )
        return;

    Import import;
    import.moduleName = module.d_val;
    import.importedAt = module.toRowCol();
    import.importer = thisMod;
    importDecl->data = QVariant::fromValue(import);
}

void Parser2::ImportList() {
	expect(Tok_IMPORT, false, "ImportList");
	ImportDecl();
	while( la.d_type == Tok_Comma ) {
		expect(Tok_Comma, false, "ImportList");
		ImportDecl();
	}
	expect(Tok_Semi, false, "ImportList");
    // done
}

void Parser2::DeclSeq(bool inObjectType) {
	while( la.d_type == Tok_CONST || la.d_type == Tok_TYPE || la.d_type == Tok_VAR || FIRST_ProcDecl(la.d_type) ) {
        if( !inObjectType && la.d_type == Tok_CONST ) {
			expect(Tok_CONST, false, "DeclSeq");
			while( FIRST_ConstDecl(la.d_type) ) {
				ConstDecl();
				expect(Tok_Semi, false, "DeclSeq");
			}
        } else if( !inObjectType && la.d_type == Tok_TYPE ) {
			expect(Tok_TYPE, false, "DeclSeq");
			while( FIRST_TypeDecl(la.d_type) ) {
				TypeDecl();
				expect(Tok_Semi, false, "DeclSeq");
			}
		} else if( la.d_type == Tok_VAR ) {
			expect(Tok_VAR, false, "DeclSeq");
			while( FIRST_VarDecl(la.d_type) ) {
                VarDecl(inObjectType);
				expect(Tok_Semi, false, "DeclSeq");
			}
		} else if( FIRST_ProcDecl(la.d_type) || la.d_type == Tok_END || la.d_type == Tok_CONST || la.d_type == Tok_END || la.d_type == Tok_VAR || la.d_type == Tok_TYPE || la.d_type == Tok_CODE || la.d_type == Tok_BEGIN || la.d_type == Tok_PROCEDURE || la.d_type == Tok_END ) {
			while( FIRST_ProcDecl(la.d_type) ) {
                if( !ProcDecl() )
                    expect(Tok_Semi, false, "DeclSeq");
			}
		} else
            invalid("DeclSeq", true);
	}
    // done
}

void Parser2::ConstDecl() {
    ID id = IdentDef();
	expect(Tok_Eq, false, "ConstDecl");
    Declaration* d = addDecl(id.name, id.visi, Declaration::ConstDecl);
    if( d == 0 )
        return;
    d->expr = ConstExpr();
}

void Parser2::TypeDecl() {
    const ID id = IdentDef();
	expect(Tok_Eq, false, "TypeDecl");

    // declare the type immediately so it is known in the forthcoming declaration
    Declaration* d = addDecl(id.name, id.visi, Declaration::TypeDecl);
    if( d == 0 )
        return;

    d->setType(Type_());
    deanonymizeType(d);
}

void Parser2::VarDecl(bool inObjectType) {
    const QList<ID> ids = IdentList();
	expect(Tok_Colon, false, "VarDecl");
    Ast::Type* t = Type_();
    if( t == 0 )
        return;
    Declaration* outer = mdl->getTopScope();
    for( int i = 0; i < ids.size(); i++ )
    {
        const ID& id = ids[i];

        Declaration* d = addDecl(id.name, id.visi, outer->kind == Declaration::Module ?
                                     Declaration::VarDecl : Declaration::LocalDecl);
        if( d == 0 )
            continue;
        if( inObjectType )
            d->kind = Declaration::Field;
        else
            d->outer = outer;
        d->setType(t);
        deanonymizeType(d);
    }
}

QByteArray Parser2::Assembler() {
	expect(Tok_CODE, false, "Assembler");
    // qDebug() << "Assembler in" << scanner->source();
    return cur.d_val;
}

bool Parser2::ProcDecl() {
	expect(Tok_PROCEDURE, false, "ProcDecl");
	if( FIRST_ProcHead(la.d_type) ) {
        Declaration* procDecl = ProcHead(false);
		expect(Tok_Semi, false, "ProcDecl");
        hasProcedures = true;
        if( procDecl && !procDecl->extern_ )
        {
            mdl->openScope(procDecl);
            DeclSeq();
            if( FIRST_Body(la.d_type) || FIRST_Assembler(la.d_type) ) {
                if( FIRST_Body(la.d_type) ) {
                    procDecl->body = Body();
                } else if( FIRST_Assembler(la.d_type) ) {
                    procDecl->data = Assembler();
                    procDecl->body = new Ast::Statement(Ast::Statement::Assembler);
                    codeSectionCount++;
                } else
                    invalid("ProcDecl");
            }
            expect(Tok_END, false, "ProcDecl");
            expect(Tok_ident, false, "ProcDecl");
            mdl->closeScope();
        } else
            return true; // external proc
    } else if( la.d_type == Tok_Hat ) {
		expect(Tok_Hat, false, "ProcDecl");
        ProcHead(true);
    } else
		invalid("ProcDecl");
    return false;
}

Declaration* Parser2::ProcHead(bool forwardDecl) {
    if( FIRST_SysFlag(la.d_type) ) {
        SysFlag();
    }
    bool isConstr = false;
    bool isExtern = false;
    if( la.d_type == Tok_Star || la.d_type == Tok_Amp || la.d_type == Tok_Minus || la.d_type == Tok_Tilde ) {
		if( la.d_type == Tok_Star ) {
            expect(Tok_Star, false, "ProcHead"); // interrupt handler
		} else if( la.d_type == Tok_Amp ) {
            expect(Tok_Amp, false, "ProcHead"); // constructor
            isConstr = true;
		} else if( la.d_type == Tok_Minus ) {
            expect(Tok_Minus, false, "ProcHead"); // inline
        } else if( la.d_type == Tok_Tilde ) {
            expect(Tok_Tilde, false, "ProcHead"); // extern
            isExtern = true;
		} else
			invalid("ProcHead");
	}
    ID id = IdentDef();
    if( forwardDecl )
    {
        // we just ignore forward declarations
        if( FIRST_FormalPars(la.d_type) ) {
            mdl->openScope(0);
            Type* ret = FormalPars();
            if( ret && !ret->owned )
                delete ret;
            Declaration* d = mdl->closeScope(true);
            Declaration::deleteAll(d);
        }
        return 0;
    }
    Declaration* procDecl = addDecl(id.name, id.visi, Declaration::Procedure);
    if( procDecl == 0 )
        return 0;

    procDecl->constructor = isConstr;
    procDecl->extern_ = isExtern;

    procDecl->outer = mdl->getTopScope();
    mdl->openScope(procDecl);

	if( FIRST_FormalPars(la.d_type) ) {
        procDecl->setType(FormalPars());
	}
    mdl->closeScope();
    return procDecl;
}

Parser2::SysFlags Parser2::SysFlag() {
	expect(Tok_Lbrack, false, "SysFlag");
	expect(Tok_ident, false, "SysFlag");
    SysFlags res;

    if( cur.d_val.constData() == predefSymbols[UNTRACED].constData() )
        res.set(UNTRACED);
    else
        error(cur, QString("unknown system flag '%1'").arg(cur.d_val.constData()));
    expect(Tok_Rbrack, false, "SysFlag");
    return res;
}

Ast::Type* Parser2::FormalPars() {
	expect(Tok_Lpar, false, "FormalPars");
	if( FIRST_FPSection(la.d_type) ) {
		FPSection();
		while( la.d_type == Tok_Semi ) {
			expect(Tok_Semi, false, "FormalPars");
			FPSection();
		}
	}
	expect(Tok_Rpar, false, "FormalPars");
    Type* res = 0;
    if( la.d_type == Tok_Colon ) {
		expect(Tok_Colon, false, "FormalPars");
        res = NamedType();
	}
    if(res == 0)
        res = mdl->getType(Type::NoType);
    return res;
}

void Parser2::FPSection() {
    bool varParam = false;
    if( la.d_type == Tok_VAR ) {
		expect(Tok_VAR, false, "FPSection");
        varParam = true;
	}
	expect(Tok_ident, false, "FPSection");
    TokenList l;
    l << cur;
    while( la.d_type == Tok_Comma ) {
		expect(Tok_Comma, false, "FPSection");
		expect(Tok_ident, false, "FPSection");
        l << cur;
    }
	expect(Tok_Colon, false, "FPSection");
    Type* t = Type_();
    if( varParam )
    {
        Type* ref = new Type();
        ref->kind = Type::Reference;
        ref->setType(t);
        ref->pos = t->pos;
        t = ref;
    }
    for(int i = 0; i < l.size(); i++ )
    {
        Declaration* d = addDecl(l[i], 0, Declaration::ParamDecl);
        if( d == 0 )
            continue;
        d->setType(t);
        deanonymizeType(d);
    }
}

Type* Parser2::ArrayType() {
    QList<Expression*> len;
    expect(Tok_ARRAY, false, "ArrayType");
    const Token tok = cur;
	if( FIRST_SysFlag(la.d_type) ) {
        SysFlag(); // ignore
	}
	if( FIRST_ConstExpr(la.d_type) ) {
        Expression* e = ConstExpr();
        if( e == 0 )
            return 0;
        len << e;
		while( la.d_type == Tok_Comma ) {
			expect(Tok_Comma, false, "ArrayType");
            e = ConstExpr();
            if( e == 0 )
                return 0;
            len << e;
		}
	}
	expect(Tok_OF, false, "ArrayType");
    Type* et = Type_();
    Type* arr = new Type();
    arr->kind = Type::Array;
    arr->pos = tok.toRowCol();
    if( !len.isEmpty() )
    {
        arr->expr = len.first();
        arr->pos = len.first()->pos;

        Type* curDim = arr;
        // this is a multi-dim array; make sure that each dimension has an explicit Array type
        for( int i = 1; i < len.size(); i++ )
        {
            Type* nextDim = new Type();
            nextDim->kind = Type::Array;
            nextDim->pos = len[i]->pos;
            nextDim->expr = len[i];
            curDim->setType(nextDim);
            curDim = nextDim;
        }
        curDim->setType(et); // the highest dim gets the element type
    }else
        arr->setType(et);
    return arr;
}

Type* Parser2::RecordType() {
	expect(Tok_RECORD, false, "RecordType");
    Type* rec = new Type();
    rec->pos = cur.toRowCol();
    rec->kind = Type::Record;
    mdl->openScope(0);
    if( FIRST_SysFlag(la.d_type) ) {
        SysFlag(); // ignored
	}
	if( la.d_type == Tok_Lpar ) {
		expect(Tok_Lpar, false, "RecordType");
        rec->setType(NamedType());
		expect(Tok_Rpar, false, "RecordType");
	}
	if( FIRST_FieldList(la.d_type) ) {
		FieldList();
	}
    rec->subs = AstModel::toList(mdl->closeScope(true));
    Declaration* outer = mdl->getTopScope();
    for( int i = 0; i < rec->subs.size(); i++ )
        rec->subs[i]->outer = outer;
    expect(Tok_END, false, "RecordType");
    return rec;
}

Type* Parser2::PointerType() {
	expect(Tok_POINTER, false, "PointerType");
    const Token tok = cur;
	if( FIRST_SysFlag(la.d_type) ) {
        SysFlag(); // ignore
	}
    Type* ptr = new Type();
    ptr->kind = Type::Pointer;
    ptr->pos = tok.toRowCol();
    expect(Tok_TO, false, "PointerType");
    ptr->setType(Type_());
    return ptr;
}

Type* Parser2::ObjectType() {
	expect(Tok_OBJECT, false, "ObjectType");
    const Token pos = cur;
    if( FIRST_SysFlag(la.d_type) || la.d_type == Tok_Lpar || FIRST_DeclSeq(la.d_type) || FIRST_Body(la.d_type) || la.d_type == Tok_END ) {
        Type* obj = new Type();
        obj->pos = pos.toRowCol();
        obj->kind = Type::Object;
        if( FIRST_SysFlag(la.d_type) ) {
            SysFlag(); // ignored
		}
        mdl->openScope(0);
        if( la.d_type == Tok_Lpar ) {
			expect(Tok_Lpar, false, "ObjectType");
            obj->setType(NamedType());
            expect(Tok_Rpar, false, "ObjectType");
		}
        DeclSeq(true);

        if( FIRST_Body(la.d_type) ) {
            la.d_val = BEGIN;
            Declaration* procDecl = addDecl(la, Declaration::Private, Declaration::Procedure);
            Q_ASSERT(procDecl);
            procDecl->begin = 1;
            mdl->openScope(procDecl);
            procDecl->body = Body();
            mdl->closeScope();
        }

        obj->subs = AstModel::toList(mdl->closeScope(true));
        expect(Tok_END, false, "ObjectType");
		if( la.d_type == Tok_ident ) {
			expect(Tok_ident, false, "ObjectType");
		}
        return obj;
    }else
        return mdl->getType(Type::ANYOBJ);
}

Type* Parser2::ProcedureType() {
	expect(Tok_PROCEDURE, false, "ProcedureType");
    mdl->openScope(0);
    Type* p = new Type();
    p->kind = Type::Procedure;
    p->pos = cur.toRowCol();
    if( FIRST_SysFlag(la.d_type) ) {
		SysFlag();
    }
	if( FIRST_Attributes(la.d_type) ) {
        std::bitset<MaxAttr> a = Attributes();
        if( a.test(DELEGATE) )
            p->delegate = true;
	}
    Type* ret = mdl->getType(Type::NoType);
    if( FIRST_FormalPars(la.d_type) ) {
        ret = FormalPars();
	}
    p->subs = AstModel::toList(mdl->closeScope(true));
    p->setType(ret);
    return p;
}

Type* Parser2::AliasType() {
    return NamedType();
}

Type* Parser2::Type_() {
    Type* res = 0;
    if( FIRST_AliasType(la.d_type) ) {
        res = AliasType();
	} else if( FIRST_ArrayType(la.d_type) ) {
        res = ArrayType();
	} else if( FIRST_RecordType(la.d_type) ) {
        res = RecordType();
	} else if( FIRST_PointerType(la.d_type) ) {
        res = PointerType();
	} else if( FIRST_ObjectType(la.d_type) ) {
        res = ObjectType();
	} else if( FIRST_ProcedureType(la.d_type) ) {
        res = ProcedureType();
	} else
		invalid("Type");
    if( res && res->kind != Type::NameRef )
        res->anonymous = true;
    return res;
}

void Parser2::FieldDecl() {
	if( FIRST_IdentList(la.d_type) ) {
        QList<ID> ids = IdentList();
		expect(Tok_Colon, false, "FieldDecl");
        Type* t = Type_();
        for( int i = 0; i < ids.size(); i++ )
        {
            Declaration* d = addDecl(ids[i].name,ids[i].visi,Declaration::Field);
            if( d == 0 )
                continue;
            d->setType(t);
            deanonymizeType(d);
        }
    }
}

void Parser2::FieldList() {
	FieldDecl();
	while( la.d_type == Tok_Semi ) {
		expect(Tok_Semi, false, "FieldList");
		FieldDecl();
	}
    // done
}

Statement* Parser2::Body() {
    hasAnyBody = true;
    return StatBlock();
}

std::bitset<Parser2::MaxAttr> Parser2::Attributes() {
    std::bitset<MaxAttr> res;
	expect(Tok_Lbrace, false, "Attributes");
    if( la.d_type == Tok_ident ) {
        int a = Attribute();
        if( a > 0 )
            res.set(a);
        while( la.d_type == Tok_Comma ) {
            expect(Tok_Comma, false, "Attributes");
            a = Attribute();
            if( a > 0 )
                res.set(a);
        }
    }
    expect(Tok_Rbrace, false, "Attributes");
    return res;
}
